--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
                     <li><a href="#services">Services</a></li>
                     <li><a href="#hours">Hours</a></li>
                     <li><a href="#contact">Contact</a></li>
-
                 </ul>
             </nav>
             <label for="nav-toggle" class="nav-toggle-label">
@@ -52,7 +51,7 @@
                 <div class="hero-text">
                     <h1 class="slogan1">LOOKING OUT FOR YOUR EYES</h1>
                     <p class="slogan2">Shop eyewear and contacts at the best possible price</p>
-                    <button>CONTACT US</button>
+                    <a href="#contact"><button>CONTACT US</button></a>
                 </div>
             </div>
             <section id="nav-about"></section>
@@ -79,65 +78,75 @@
         </section>
 
         <!-- SCROLL TO THE TOP BUTTON -->
-        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+        <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="icon-chevron-up"></i></button>
 
 
         <section id="products">
         </section>
 
         <!-- BRANDS -->
-        <h1 class="brands">ALL THE BRANDS YOU LOVE</h1>
-        <div class="grid-container">
-            <div class="grid-item"><img src="imgs/b1.png" alt="For Art's Sake"></div>
-            <div class="grid-item"><img src="imgs/b2.png" alt="TOM FORD"></div>
-            <div class="grid-item"><img src="imgs/b3.png" alt="Saint Laurent"></div>
-            <div class="grid-item"><img src="imgs/b4.png" alt="Gucci"></div>
-            <div class="grid-item"><img src="imgs/b5.png" alt="Salvatore Ferragamo"></div>
-            <div class="grid-item"><img src="imgs/b6.png" alt="Swarovski"></div>
-            <div class="grid-item"><img src="imgs/b7.png" alt="Chloe"></div>
-            <div class="grid-item"><img src="imgs/b8.png" alt="Lacoste"></div>
-            <div class="grid-item"><img src="imgs/b9.png" alt="Tom's"></div>
-            <div> </div>
-            <button>VIEW ALL</button>
+        <section id="brands">
+            <h1 class="brands">ALL THE BRANDS YOU LOVE</h1>
+            <div class="grid-container">
+                <div class="grid-item"><img src="imgs/b1.png" alt="For Art's Sake"></div>
+                <div class="grid-item"><img src="imgs/b2.png" alt="TOM FORD"></div>
+                <div class="grid-item"><img src="imgs/b3.png" alt="Saint Laurent"></div>
+                <div class="grid-item"><img src="imgs/b4.png" alt="Gucci"></div>
+                <div class="grid-item"><img src="imgs/b5.png" alt="Salvatore Ferragamo"></div>
+                <div class="grid-item"><img src="imgs/b6.png" alt="Swarovski"></div>
+                <div class="grid-item"><img src="imgs/b7.png" alt="Chloe"></div>
+                <div class="grid-item"><img src="imgs/b8.png" alt="Lacoste"></div>
+                <div class="grid-item"><img src="imgs/b9.png" alt="Tom's"></div>
+            </div>
+            <div style="text-align:center">
+                <button id="btn">VIEW ALL</button>
+            </div>
 
-        </div>
 
+            <span id="more">
 
+        </span>
+        </section>
 
+        <!-- SERVICES -->
         <section id="services">
-            <h2> SERVICES
-            </h2>
             <article>
+                <h2> SERVICES</h2>
 
                 <h3> We provide:</h3>
-                <p>
-                    <uo>
-                        <li>prescription eyewear</li>
-                        <li>sunglasses</li>
-                        <li>both soft and rigid contact lenses</li>
-                        <li>safety and sport glasses</li>
-                    </uo>
-                </p>
+                <div id="service-list">
+                    <p>
+
+                        <ul>
+                            <li>prescription eyewear</li>
+                            <li>sunglasses</li>
+                            <li>both soft and rigid contact lenses</li>
+                            <li>safety and sport glasses</li>
+                        </ul>
+                    </p>
+                </div>
                 <h3> Services include:</h3>
                 <p>
-                    <uo>
-
+                    <ul>
                         <li>repairs to glasses</li>
                         <li>adjustments</li>
                         <li>custom alterations <br>(crystal designs, implant nosepads, temple lengthening and shortening, etc.)</li>
-                    </uo>
+                    </ul>
                 </p>
                 <p>
                     We accept most insurance company claims, MCSS, ODSP.
                 </p>
-
-
             </article>
         </section>
 
+
+
+
+
+        <!-- HOURS -->
         <section id="hours">
-            <h2>Hours</h2>
-            <div>Hours
+            <div>
+                <p id="hrs">Hours</p>
                 <table>
                     <tbody>
                         <tr>
@@ -176,105 +185,51 @@
         </section>
 
         <section id="contact">
-            <h2>Contact</h2>
-            <article>
-                <p>
-                    PHONE MAP Location 668 Silver Star Blvd. Unit 206, Scarborough, ON, M1V 5N1
 
-                </p>
+            <div class="float-container">
 
+                <div class="float-child">
+                    <div class="green">Address: <br>668 Silver Star Blvd. Unit 206, <br>Scarborough, ON, M1V 5N1</div>
+                </div>
 
-            </article>
+                <div class="float-child">
+                    <div class="blue">Phone: (416) 291-8989</div>
+                </div>
+                <div class="float-child">
+                    <div class="green">Email: info.mayoptical@gmail.com</div>
+                </div>
+
+                <div class="float-child">
+                    <div class="blue">Phone:</div>
+                </div>
+            </div>
+
         </section>
 
 
 
+        <div>Follow Us</div>
+        <div>
+            <a href="https://www.facebook.com/mayopticalca/" target="_blank"><i class="fab fa-facebook-square fa-3x"></i></a>
+            <a href="https://www.instagram.com/mayoptical/" target="_blank"><i class="fab fa-instagram-square fa-3x"></i></a>
+        </div>
+
+
         <footer class="footer">
 
-
-            <section class="footer-left">
-                <div>May Optical © 2021. All rights reserved.
-                </div>
-
-            </section>
-
-            <section class="footer-mid-left">
-
-                <div>Hours
-                    <table>
-                        <tbody>
-                            <tr>
-                                <td>Monday</td>
-                                <td>11:00 - 5:00</td>
-                            </tr>
-                            <tr>
-                                <td>Tuesday&nbsp;</td>
-                                <td>Closed</td>
-                            </tr>
-                            <tr>
-                                <td>Wednesday&nbsp;</td>
-                                <td>Closed</td>
-                            </tr>
-                            <tr>
-                                <td>Thursday&nbsp;</td>
-                                <td>11:00 - 5:00</td>
-                            </tr>
-                            <tr>
-                                <td>Friday&nbsp;</td>
-                                <td>11:00 - 5:00&nbsp;</td>
-                            </tr>
-                            <tr>
-                                <td>Saturday</td>
-                                <td>11:00 - 4:00&nbsp;</td>
-                            </tr>
-                            <tr>
-                                <td>Sunday&nbsp;</td>
-                                <td>12:00 - 4:00&nbsp;</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </section>
-
-            <form action="http://maps.google.com/maps" method="get" target="_blank">
-                <label for="saddr">May Optical</label>
-                <input type="hidden" name="daddr" value="May Optical, 668 Silver Star Blvd, Scarborough, ON M1V 5N1" />
-                <input type="submit" value="Get directions" />
-            </form>
-
-            <section class="footer-mid-right">
-                <div>Location</div>
-                <div><i class="fas fa-map-marker-alt">&nbsp</i> 668 Silver Star Blvd. Unit 206,</div>
-                <div> Scarborough, ON, M1V 5N1</div>
-                <div>Phone</div>
-
-                <div><i class="fas fa-phone-alt">&nbsp</i>
-                    <a href="tel:416-291-8989"> (416) 291-8989</a></div>
-                <div>Email</div>
-
-                <div><i class="fas fa-envelope">&nbsp</i><a href="mailto:info.mayoptical@gmail.com">info.mayoptical@gmail.com</a></div>
-                <!--| <i class="fab fa-whatsapp"></i> WhatsApp: (416) 291-8989</div>-->
-            </section>
-
-
-            <section class="footer-right">
-                <div>Follow Us</div>
-                <div>
-                    <a href="https://www.facebook.com/mayopticalca/" target="_blank"><i class="fab fa-facebook-square fa-3x"></i></a>
-                    <a href="https://www.instagram.com/mayoptical/" target="_blank"><i class="fab fa-instagram-square fa-3x"></i></a>
-                </div>
-            </section>
-
+            © Copyright 2021 May Optical - All Rights Reserved
 
         </footer>
     </div>
 
     <!--FONTAWESOME ICONS-->
     <script src="https://kit.fontawesome.com/42de2dc56d.js" crossorigin="anonymous"></script>
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
     <!-- JAVA SCRIPT -->
     <script src="js/script.js"></script>
 
 </body>
+
 
 </html>
